--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "homepage": "https://github.com/czim",
     "require": {
         "php": ">=5.5.9",
-        "czim/laravel-cms": "^0.9.1",
+        "czim/laravel-cms-core": "^0.9.1",
         "czim/laravel-repository": "^1.0",
         "phpdocumentor/reflection-docblock": "^3.1"
     },
