--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "phpunit/phpunit": "4.*",
         "mockery/mockery": "0.9.*",
         "scrutinizer/ocular": "~1.1",
-        "orchestra/testbench": "~3.0"
+        "orchestra/testbench": "~3.0",
+        "dimsav/laravel-translatable": "^5.6",
+        "codesleeve/laravel-stapler": "^1.0"
     },
     "autoload": {
         "psr-4": {
