Updated composer dependency for czim/laravel-repository

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": ">=5.5.9",
         "czim/laravel-cms-core": "^0.9.1",
         "czim/laravel-filter": "^1.0",
-        "czim/laravel-repository": "^1.0",
+        "czim/laravel-repository": "~1.2",
         "phpdocumentor/reflection-docblock": "^3.1"
     },
     "require-dev": {
