--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,12 @@
     "homepage": "https://github.com/czim",
     "require": {
         "php": ">=5.5.9",
-        "czim/laravel-cms-core": "^1.3",
         "czim/laravel-filter": "^1.0",
         "czim/laravel-repository": "~1.2",
         "phpdocumentor/reflection-docblock": "^3.1"
     },
     "require-dev": {
+        "czim/laravel-cms-core": "~1.3",
         "phpunit/phpunit": "4.*",
         "mockery/mockery": "0.9.*",
         "scrutinizer/ocular": "~1.1",
