--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": ">=5.5.9",
         "czim/laravel-filter": "^1.0",
-        "czim/laravel-repository": "~1.2",
+        "czim/laravel-repository": "1.2.*",
         "phpdocumentor/reflection-docblock": "^3.1"
     },
     "require-dev": {
