--- a/composer.json
+++ b/composer.json
@@ -4,17 +4,16 @@
     "keywords": [ "cms", "laravel" ],
     "homepage": "https://github.com/czim",
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=5.6.4",
         "czim/laravel-filter": "^1.0",
         "czim/laravel-repository": "1.2.*",
         "phpdocumentor/reflection-docblock": "^3.1"
     },
     "require-dev": {
-        "czim/laravel-cms-core": "~1.3",
-        "phpunit/phpunit": "4.*",
+        "phpunit/phpunit": "~5.7",
         "mockery/mockery": "0.9.*",
         "scrutinizer/ocular": "~1.1",
-        "orchestra/testbench": "~3.0",
+        "orchestra/testbench": "~3.4",
         "dimsav/laravel-translatable": "^5.6",
         "codesleeve/laravel-stapler": "^1.0",
         "satooshi/php-coveralls": "^1.0"
