Updated dependencies for 5.4 and testing

--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,16 @@
     "require": {
         "php": ">=5.6.4",
         "czim/laravel-filter": "^1.0",
-        "czim/laravel-repository": "1.2.*",
+        "czim/laravel-repository": "~1.4",
         "phpdocumentor/reflection-docblock": "^3.1"
     },
     "require-dev": {
+        "czim/laravel-cms-core": "dev-laravel-5.4",
         "phpunit/phpunit": "~5.7",
         "mockery/mockery": "0.9.*",
         "scrutinizer/ocular": "~1.1",
         "orchestra/testbench": "~3.4",
+        "orchestra/database": "~3.4",
         "dimsav/laravel-translatable": "^5.6",
         "codesleeve/laravel-stapler": "^1.0"
     },
