--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,13 @@ language: php
 php:
   - 5.6
   - 7.0
-  - hhvm
 
-install: composer install --dev
+script:
+  - mkdir -p build/logs
+  - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
-script: phpunit
+after_script:
+  - vendor/bin/coveralls -v
 
 notifications:
   email:
