--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "scrutinizer/ocular": "~1.1",
         "orchestra/testbench": "~3.0",
         "dimsav/laravel-translatable": "^5.6",
-        "codesleeve/laravel-stapler": "^1.0"
+        "codesleeve/laravel-stapler": "^1.0",
+        "satooshi/php-coveralls": "^1.0"
     },
     "autoload": {
         "psr-4": {
