--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         "phpdocumentor/reflection-docblock": "^3.1"
     },
     "require-dev": {
-        "czim/laravel-cms-core": "~1.3",
+        "czim/laravel-cms-core": "1.3.*",
         "phpunit/phpunit": "4.*",
         "mockery/mockery": "0.9.*",
         "scrutinizer/ocular": "~1.1",
-        "orchestra/testbench": "~3.0",
+        "orchestra/testbench": "3.3.*",
         "dimsav/laravel-translatable": "^5.6",
         "codesleeve/laravel-stapler": "^1.0",
         "satooshi/php-coveralls": "^1.0"
