--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "scrutinizer/ocular": "~1.1",
         "orchestra/testbench": "3.3.*",
         "dimsav/laravel-translatable": "^5.6",
+        "czim/laravel-listify": "^1.0",
         "codesleeve/laravel-stapler": "^1.0",
         "satooshi/php-coveralls": "^1.0"
     },
