--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "orchestra/testbench": "~3.4",
         "orchestra/database": "~3.4",
         "dimsav/laravel-translatable": "^5.6",
+        "czim/laravel-listify": "^1.0",
         "codesleeve/laravel-stapler": "^1.0",
         "satooshi/php-coveralls": "^1.0"
     },
