--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=5.5.9",
         "czim/laravel-filter": "^1.0",
         "czim/laravel-repository": "1.2.*",
+        "doctrine/dbal": "^2.5",
         "phpdocumentor/reflection-docblock": "^3.1"
     },
     "require-dev": {
