--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,16 @@
 {
     "name": "czim/laravel-cms-models",
     "description": "Laravel CMS: Main Models Module Generator",
+    "authors": [
+        {
+            "name": "Coen Zimmerman",
+            "email": "coen@pixelindustries.com"
+        }
+    ],
     "keywords": [ "cms", "laravel" ],
     "homepage": "https://github.com/czim",
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=5.6.4",
         "czim/laravel-filter": "^1.0",
         "czim/laravel-repository": "1.2.*",
         "doctrine/dbal": "^2.5",
