--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,7 @@ php:
   - 5.6
   - 7.0
 
-services:
-  - mysql
-
-before_install:
-  - mysql -e 'CREATE DATABASE testing;'
+install: composer install --dev
 
 script:
   - mkdir -p build/logs
