--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ php:
   - 5.6
   - 7.0
 
+services:
+  - mysql
+
+before_install:
+  - mysql -e 'CREATE DATABASE testing;'
+
 install: composer install --dev
 
 script:
