Added testing resources for controller integration tests

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,6 +13,7 @@
     <testsuites>
         <testsuite name="CMS Models Package Test Suite">
             <directory suffix=".php">./tests/</directory>
+            <exclude>./tests/Helpers/resources/</exclude>
         </testsuite>
     </testsuites>
 
