--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "phpdocumentor/reflection-docblock": "^3.1"
     },
     "require-dev": {
-        "czim/laravel-cms-core": "1.3.*",
+        "czim/laravel-cms-core": "~1.3",
         "phpunit/phpunit": "4.*",
         "mockery/mockery": "0.9.*",
         "scrutinizer/ocular": "~1.1",
