Removed deprecated —dev composer option

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
 before_install:
   - mysql -e 'CREATE DATABASE testing;'
 
-install: composer install --dev
+install: composer install
 
 script:
   - mkdir -p build/logs
