--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "phpdocumentor/reflection-docblock": "^3.1"
     },
     "require-dev": {
-        "czim/laravel-cms-core": "1.3.*",
-        "phpunit/phpunit": "4.*",
+        "czim/laravel-cms-core": "~1.4.0",
+        "phpunit/phpunit": "~5.7",
         "mockery/mockery": "0.9.*",
         "scrutinizer/ocular": "~1.1",
         "orchestra/testbench": "~3.4",
