--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "dimsav/laravel-translatable": "^5.6",
         "czim/laravel-listify": "^1.0",
         "codesleeve/laravel-stapler": "^1.0",
-        "satooshi/php-coveralls": "^1.0"
+        "satooshi/php-coveralls": "^1.0",
+        "symfony/dom-crawler": "^3.3"
     },
     "autoload": {
         "psr-4": {
