--- a/composer.json
+++ b/composer.json
@@ -10,20 +10,19 @@
     "keywords": [ "cms", "laravel" ],
     "homepage": "https://github.com/czim",
     "require": {
-        "php": ">=7.0.0",
+        "php": ">=7.1.3",
         "czim/laravel-filter": "^1.0",
         "czim/laravel-repository": "~1.4",
 	    "doctrine/dbal": "^2.5",
         "phpdocumentor/reflection-docblock": "^3.1|^4.1"
     },
     "require-dev": {
-        "czim/laravel-cms-core": "~1.5.0",
-        "phpunit/phpunit": "~6.0",
-        "mockery/mockery": "0.9.*",
-        "scrutinizer/ocular": "~1.1",
-        "orchestra/testbench": "~3.5",
-        "orchestra/database": "~3.5",
-        "dimsav/laravel-translatable": "^8.0",
+        "czim/laravel-cms-core": "~1.6.0",
+        "phpunit/phpunit": "~7.0",
+        "mockery/mockery": "~1.0",
+        "orchestra/testbench": "~3.6",
+        "orchestra/database": "~3.6",
+        "dimsav/laravel-translatable": "^9.0",
         "czim/laravel-listify": "^1.0",
         "codesleeve/laravel-stapler": "^1.0",
         "satooshi/php-coveralls": "^1.0",
